# nixopus

./: .gitignore  CHANGELOG.md  docker-compose.yml  package.json
api/: .env.sample  Makefile  env.test  (+3 more)
cli/: Makefile  build.sh  main.py  pyproject.toml
cli/app/: main.py
cli/app/commands/clone/: clone.py  command.py  messages.py
cli/app/commands/conf/: base.py  command.py  delete.py  list.py  messages.py  set.py
cli/app/commands/conflict/: command.py  conflict.py  messages.py  models.py
cli/app/commands/install/: clone.py  command.py  deps.py  messages.py  run.py  ssh.py
cli/app/commands/preflight/: command.py  deps.py  messages.py  port.py
cli/app/commands/proxy/: __init__.py  base.py  command.py  load.py  messages.py  status.py  stop.py
cli/app/commands/service/: __init__.py  base.py  command.py  down.py  messages.py  ps.py  restart.py  up.py
cli/app/commands/setup/: __init__.py  dev.py
cli/app/commands/test/: command.py  test.py
cli/app/commands/version/: command.py  version.py
cli/app/utils/: config.py  lib.py  message.py  output_formatter.py  protocols.py
cli/app/utils/tests/: test_config.py  test_processor.py
cli/commands/: test.py  version.py
cli/commands/preflight/: command.py  messages.py  port.py
cli/commands/test/: command.py  messages.py
cli/commands/version/: command.py
cli/core/: __init__.py  config.py  version.py
cli/core/preflight/: port.py
cli/core/test/: __init__.py  test.py
cli/core/version/: version.py
cli/tests/: __init__.py  port.py  test_commands_version.py  version.py
cli/utils/: logger.py  message.py
(+133 files in other folders)
