[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixopus"
version = "0.1.0"
description = "A CLI for Nixopus"
authors = [
    { name = "Nixopus", email = "raghavyuva@gmail.com" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
nixopus = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov=utils --cov-report=term-missing"
